--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "npm": "8.10.0"
   },
   "scripts": {
-    "dev": "nodemon src/server",
-    "start": "node src/server"
+    "dev": "nodemon src/server --ignore db.json",
+    "start": "node src/server --ignore db.json"
   },
   "keywords": [],
   "author": "Ing Alcides Cádiz",
@@ -19,6 +19,9 @@
     "cors": "2.8.5",
     "dotenv": "16.0.1",
     "ejs": "3.1.8",
-    "express": "4.18.1"
+    "express": "4.18.1",
+    "jsonwebtoken": "8.5.1",
+    "lowdb": "3.0.0",
+    "uuid": "8.3.2"
   }
 }
