--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "Ing Alcides Cádiz",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "5.0.1",
     "cors": "2.8.5",
     "dotenv": "16.0.1",
     "ejs": "3.1.8",
     "express": "4.18.1",
     "jsonwebtoken": "8.5.1",
     "lowdb": "3.0.0",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "validaresquema": "0.1.2"
   }
 }
